argo-cd/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name:      argo-cd
  namespace: argo-cd
spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: websecure
  hostnames:
    - argo-cd.lunics.cloud
  rules:
    - matches:
        - path:
            type:  PathPrefix
            value: /
      backendRefs:
        - name: argo-cd-server
          port: 443
